--- a/Latex/thesis_latex/ethidsc.sty
+++ b/Latex/thesis_latex/ethidsc.sty
@@ -31,7 +31,7 @@
 
 \DeclareOption{mt}{\gdef\@type{\ifingerman Masterarbeit\else Master Thesis\fi}}
 \DeclareOption{bt}{\gdef\@type{\ifingerman Bachelorarbeit\else Bachelor Thesis\fi}}
-\DeclareOption{st}{\gdef\@type{\ifingerman Semesterarbeit\else Semester Thesis\fi}}
+\DeclareOption{st}{\gdef\@type{\ifingerman Bachelorarbeit\else Bachelor Thesis\fi}}
 
 \ExecuteOptions{german,st}
 \ProcessOptions
@@ -135,14 +135,14 @@ Zurich, \the\day. \the\month. \the\year: \hrulefill
 \begin{minipage}[c]{0.4\textwidth}
  \begin{flushleft}
  \hspace*{-1.5cm}
- \includegraphics[height=1.5cm]{img/ethlogo.eps}
+ \includegraphics[height=2cm]{img/UM_logo.eps}
  \end{flushleft}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{0.4\textwidth}
  \begin{flushright}
  \hspace*{0.4cm}
- \includegraphics[height=1.6cm]{img/IDSC_logo_Full.eps}
+ \includegraphics[height=2cm]{img/logo.jpeg}
  \end{flushright}
 \end{minipage}
 \vspace*{5.0cm}
@@ -158,8 +158,7 @@ Zurich, \the\day. \the\month. \the\year: \hrulefill
  Institut f\"{u}r Dynamische Systeme und Regelungstechnik\\
  Eidgen\"{o}ssische Technische Hochschule (ETH) Z\"{u}rich\\
 \else
- Institute for Dynamic Systems and Control\\
- Swiss Federal Institute of Technology (ETH) Zurich\\
+ In partial fulfillment of the requirements for the degree Bachelor of Science (BSc) at Maastricht University.\\
 \fi
 \vspace{3.5cm}
 
