table of content outlined

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -76,6 +76,8 @@
 \cleardoublepage
 \input{chapters/conclusion}
 \cleardoublepage
+\input{chapters/personalreflection}
+\cleardoublepage
 %\input{chapters/howto}
 %\cleardoublepage
 % \input{}
