starting with single qubit gates

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -46,8 +46,8 @@
 
 \identification{IDSC-XX-YY-ZZ} 		% Project identifier
 
-\infopage %includes the last page
-\declaration
+%\infopage %includes the last page
+%\declaration
 
 % Begin document________________________________________________________________
 \begin{document}
@@ -68,16 +68,16 @@
 
 \input{chapters/introduction}
 \cleardoublepage
-\input{chapters/materialsandmethods}
-\cleardoublepage
-\input{chapters/resultsanddiscussion}
-\cleardoublepage
-\input{chapters/outlook}
-\cleardoublepage
-\input{chapters/conclusion}
-\cleardoublepage
-\input{chapters/personalreflection}
-\cleardoublepage
+%\input{chapters/materialsandmethods}
+%\cleardoublepage
+%\input{chapters/resultsanddiscussion}
+%\cleardoublepage
+%\input{chapters/outlook}
+%\cleardoublepage
+%\input{chapters/conclusion}
+%\cleardoublepage
+%\input{chapters/personalreflection}
+%\cleardoublepage
 %\input{chapters/howto}
 %\cleardoublepage
 % \input{}
