working on multi qubit systems

--- a/Latex/thesis_latex/thesis.bib
+++ b/Latex/thesis_latex/thesis.bib
@@ -1,27 +1,13 @@
-@Book{ fasys,
-	title = "{Vehicle Propulsion Systems: Introduction to Modeling and Optimization}",
-	author = "L. Guzzella and A. Sciarretta",
-	year = "2007",
-	publisher = "Springer"
+@article{shende2008cnot,
+  title={On the CNOT-cost of TOFFOLI gates},
+  author={Shende, Vivek V and Markov, Igor L},
+  journal={arXiv preprint arXiv:0803.2316},
+  year={2008}
 }
 
-@Book{ optreg,
-	title = "{Optimal Control with Engineering Applications}",
-	author = "H. P. Geering",
-	year = "2007",
-	publisher = "Springer"
-}
-
-@Book{ motsys,
-	title = "{Introduction To Modeling And Control Of Internal Combustion Engine Systems}",
-	author = "L. Guzzella and C.H. Onder",
-	year = "2004",
-	publisher = "Springer"
-}
-
-@Book{ sysdyn,
-	title = "{Modeling and Analysis of Dynamic Systems}",
-	author = "L. Guzzella",
-	year = "2008",
-	publisher = "ETH Zurich"
+@book{nielsen2010quantum,
+  title={Quantum computation and quantum information},
+  author={Nielsen, Michael A and Chuang, Isaac L},
+  year={2010},
+  publisher={Cambridge university press}
 }
