parts of proposal transferred

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -45,11 +45,6 @@ Implementing a quantum k-nearest neighbour algorithm}
 \semesterA{5}
 \emailA{m.fingerhuth@student.maastrichtuniversity.nl}
 
-%\studentB{Second Student}
-%\ethidB{12-345-678}
-%\semesterB{9}
-%\emailB{second@student.ethz.ch}
-
 \supervision{Prof. Francesco Petruccione\\ Dr. Fabrice Birembaut}
 \date{January 2017}
 
@@ -89,7 +84,7 @@ Implementing a quantum k-nearest neighbour algorithm}
 %\cleardoublepage
 %\input{chapters/personalreflection}
 %\cleardoublepage
-\input{chapters/howto}
+%\input{chapters/howto}
 %\cleardoublepage
 % \input{}
 % \cleardoublepage
