ML and more theory edits

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -10,6 +10,7 @@
 \usepackage{eurosym}
 \usepackage{amsmath}
 \usepackage{array}
+\usepackage{float}
 
 % Defining some new mathematics commands
 \newcommand*{\colvec}[1]{\begin{pmatrix}#1\end{pmatrix}}
