theory and introduction 85% done

--- a/Latex/thesis_latex/thesis.tex
+++ b/Latex/thesis_latex/thesis.tex
@@ -11,6 +11,10 @@
 \usepackage{amsmath}
 \usepackage{array}
 \usepackage{float}
+\usepackage{tcolorbox}
+\newtcolorbox{redbox}{colback=red!5!white,colframe=red!75!black}
+\newtcolorbox{bluebox}{colback=blue!5!white,colframe=blue!75!black}
+\newtcolorbox{greenbox}{colback=green!5!white,colframe=green!75!black}
 
 % Defining some new mathematics commands
 \newcommand*{\colvec}[1]{\begin{pmatrix}#1\end{pmatrix}}
